--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   "license": "ISC",
   "devDependencies": {
     "@faker-js/faker": "^7.3.0",
+    "ajv": "^8.11.0",
     "cypress": "^8.7.0"
   }
 }
