--- a/package.json
+++ b/package.json
@@ -4,11 +4,17 @@
   "description": "",
   "main": "index.js",
   "scripts": {
+    "scripts": "cypress run",
     "cy:open": "cypress open",
     "cy:run": "cypress run",
     "cy:open:prod": "cypress open --env configFile=prod",
     "cy:run:prod": "cypress run --env configFile=prod",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "clean:reports": "rmdir /S /Q cypress\\reports && mkdir cypress\\reports && mkdir cypress\\reports\\mochareports",
+    "pretest": "npm run clean:reports",
+    "combine-reports": "mochawesome-merge cypress/reports/mocha/*.json > cypress/reports/mochareports/report.json",
+    "generate-report": "marge cypress/reports/mochareports/report.json -f report -o cypress/reports/mochareports",
+    "posttest": "npm run combine-reports && npm run generate-report",
+    "test": "npm run scripts || npm run posttest"
   },
   "keywords": [],
   "author": "Thalis Bruno Stertz",
@@ -16,6 +22,11 @@
   "devDependencies": {
     "@faker-js/faker": "^7.3.0",
     "ajv": "^8.11.0",
-    "cypress": "^8.7.0"
+    "cypress": "^8.7.0",
+    "cypress-multi-reporters": "^1.6.1",
+    "mocha": "^10.0.0",
+    "mochawesome": "^7.1.3",
+    "mochawesome-merge": "^4.2.1",
+    "mochawesome-report-generator": "^6.2.0"
   }
 }
